Feature (Menu) refactor

--- a/Farmer-vs-weeds/Farmer-vs-weeds.csproj
+++ b/Farmer-vs-weeds/Farmer-vs-weeds.csproj
@@ -12,4 +12,8 @@
     <Compile Remove="Menu\FarmerMenu.cs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Combat\" />
+  </ItemGroup>
+
 </Project>
